Page MenuHome GnuPG

Kleopatra: Use "SCD DEVINFO --watch" also on Windows
Testing, LowPublic

Description

We didn't use "SCD DEVINFO --watch" on Windows because of T5359: Kleopatra: Loop in DeviceInfoWatcher with GnuPG 2.3 on Windows. This has been fixed quite some time ago, so that we can re-enable the usage of DeviceInfoWatcher on Windows (for GnuPG 2.4.0+).

Event Timeline

ikloecker created this task.
ikloecker changed the task status from Open to Testing.Mar 18 2024, 10:50 AM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Testing:

(The last two things should also have worked without this change because Kleopatra used a different trigger, watching for certain file system changes, to update the smart card view.)

ikloecker lowered the priority of this task from Normal to Low.May 16 2024, 11:00 AM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

I have reverted the changes (also for VSD 3.3). I'll set this to open again and lower priority to low because the legacy file watching seems to work on Windows. We can revisit enabling the DeviceInfoWatcher on Windows when we have time to look into the root cause of T6688.

ikloecker changed the task status from Testing to Open.May 16 2024, 11:04 AM
ikloecker removed a project: vsd33.
ikloecker changed the task status from Open to Testing.May 16 2024, 11:55 AM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

In the Qt 6 version the DeviceInfoWatcher can be enabled on Windows for A/B testing by adding the following config option to kleopatrarc:

[__Experimental__]
UseDeviceInfoWatcher=true
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.May 19 2025, 11:47 AM
timegrid edited projects, added gpd5x; removed Restricted Project.Dec 12 2025, 2:23 PM
timegrid moved this task from Backlog to QA on the gpd5x board.
timegrid added a subscriber: timegrid.

Looks good to me on gpg4win-5.0.0-beta479 @ win11.
Both without and with DeviceInfoWatcher (via configuration as shown in https://dev.gnupg.org/T7045#186162 ):

  • Removal of smart card -> smart card is removed in smart card view
  • Insertion of smart card + gpg-card -> smart card is added in smart card view