Re-enable DeviceInfoWatcher on Windows

GnuPG-bug-id: 7045