src/smartcard/deviceinfowatcher.cpp
@@ -137,12 +137,7 @@ DeviceInfoWatcher::~DeviceInfoWatcher()
 // static
 bool DeviceInfoWatcher::isSupported()
 {
-#ifdef Q_OS_WIN
-    // "SCD DEVINFO --watch" does not seem to work on Windows; see https://dev.gnupg.org/T5359
-    return false;
-#else
-    return engineInfo(GpgEngine).engineVersion() >= "2.3.0";
-#endif
+    return engineInfo(GpgEngine).engineVersion() >= "2.4.0";
 }
 
 void DeviceInfoWatcher::start()
